--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,10 +33,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.tigerbus.ui.SearchActivity"
+            android:name="com.tigerbus.ui.SearchRouteActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name="com.tigerbus.ui.route.RouteActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
