--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation "com.google.firebase:firebase-messaging:${rootProject.firebaseVersion}"
     // android support
     implementation "com.android.support:appcompat-v7:${rootProject.ext.androidsupportVersion}"
+    implementation "com.android.support:cardview-v7:${rootProject.ext.androidsupportVersion}"
     implementation "com.android.support:recyclerview-v7:${rootProject.androidsupportVersion}"
     implementation "com.android.support:support-v13:${rootProject.androidsupportVersion}"
     implementation "com.android.support:customtabs:${rootProject.androidsupportVersion}"
