--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
             android:name="com.tigerbus.ui.route.RouteActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
 
-        <service android:name=".Service.RemindService" android:enabled="true" />
+        <service android:name=".service.RemindService" android:enabled="true" />
     </application>
 
 </manifest>
