--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,13 +41,19 @@
         </activity>
         <activity
             android:name="com.tigerbus.ui.search.SearchRouteActivity"
-            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name="com.tigerbus.ui.route.RouteActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
 
         <service android:name=".service.RemindService" android:enabled="true" />
+
+        <receiver android:name=".TigerBroadCast">
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_ADDED" />
+                <action android:name="android.intent.action.PACKAGE_DATA_CLEARED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
