--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,14 +28,14 @@ android {
         sourceCompatibility rootProject.javaVersion
         targetCompatibility rootProject.javaVersion
     }
-    signingConfigs {
-        config {
-            keyAlias 'key0'
-            keyPassword '963852'
-            storePassword '963852'
-            storeFile file('C:/Users/Kailin/Documents/tiger.jks')
-        }
-    }
+//    signingConfigs {
+//        config {
+//            keyAlias 'key0'
+//            keyPassword '963852'
+//            storePassword '963852'
+//            storeFile file('C:/Users/Kailin/Documents/tiger.jks')
+//        }
+//    }
 //    productFlavors {
 //        Taiwan {}
 //        Taipei {}
@@ -49,10 +49,10 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.config
+//            signingConfig signingConfigs.config
         }
         debug {
-            signingConfig signingConfigs.config
+//            signingConfig signingConfigs.config
         }
     }
     externalNativeBuild {
