--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,9 @@ android {
             signingConfig signingConfigs.config
         }
         debug {
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
         }
     }
